# sayvibe

./: .gitignore  LICENSE  README.md  README.zh-CN.md
docs/: xiaohongshu-launch.md
ios/: README.md
ios/SayVibe/: ContentView.swift  Info.plist  LanScanner.swift  LocalNetwork.swift  RelayModels.swift  RelayViewModel.swift  SayVibeApp.swift
ios/SayVibe.xcodeproj/: project.pbxproj
ios/SayVibe/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/SayVibeWidget/: Info.plist  SayVibeWidget.swift  SayVibeWidgetBundle.swift
ios/scripts/: generate-appicon.sh  package-iphone.sh
pc_rust/: README.md  index.html  package-lock.json  package.json
pc_rust/src/: App.vue  styles.css
pc_rust/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
pc_rust/src-tauri/capabilities/: default.json
pc_rust/src-tauri/icons/: icon.icns
pc_rust/src-tauri/src/: main.rs  protocol.rs  relay.rs
